Git Page Redirect Test

--- a/Color.html
+++ b/Color.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <meta http-equiv="refresh" content="time; URL=https://convertit.github.io?test=color" />
   </head>
   <body>
     Git Pages Test - Color
