--- a/Color.html
+++ b/Color.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <meta http-equiv="refresh" content="3; URL=https://convertit.github.io/?test=color" />
+    <!-- <meta http-equiv="refresh" content="3; URL=https://convertit.github.io/?test=color" /> -->
+    <script>
+      window.location.replace(`https://convertit.github.io/?test=color`);
+    </script>
   </head>
   <body>
     Git Pages Test - Color
