Color Redirect + Favicons

--- a/Color.html
+++ b/Color.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!-- Copyright (c) 2021 JDK.FHWS@gmail.com -->
+<html lang = 'en'>
   <head>
-    <meta charset="utf-8">
-    <title></title>
-    <!-- <meta http-equiv="refresh" content="3; URL=https://convertit.github.io/?test=color" /> -->
+    <meta charset = 'utf-8'/>
+    <title>&#65279;</title>
+    <!-- Icons -------------------------------------------------------------------->
+    <link rel = 'icon' type = 'image/png' sizes = '16x16' href = '/favicons/16.png'>
+    <link rel = 'icon' type = 'image/png' sizes = '32x32' href = '/favicons/32.png'>
+    <!-- Search ---------------------------------------------------------------------->
+    <meta name = 'description' content = 'Transform one frequency unit into another.'/>
+    <meta name = 'robots' content = 'nofollow, noarchive'/>
+    <meta name = 'keywords' content = 'Convert, Conversion, Color'/>
+    <meta name = 'author' content = 'git/ConvertIt'/>
+    <!-- Misc ------------------------------------------------------------->
+    <meta name = 'viewport' content='width=device-width, initial-scale=1.0'>
+    <!-- Style -------------------------->
+    <style>
+      @media(prefers-color-scheme:dark){
+        body {
+          background-color:rgb(50,54,57);
+        }
+      }
+    </style>
+    <!-- Redirect ----------------------------->
     <script>
-      window.location.replace(`https://convertit.github.io/?test=color`);
+
+      // window.location.replace(`https://convertIt.github.io?Type=Color`);
+
     </script>
   </head>
-  <body>
-    Git Pages Test - Color
-  </body>
 </html>
