--- a/Color.html
+++ b/Color.html
@@ -16,16 +16,14 @@
     <meta name = 'viewport' content='width=device-width, initial-scale=1.0'>
     <!-- Style -------------------------->
     <style>
-      @media(prefers-color-scheme:dark){
-        body {
-          background-color:rgb(50,54,57);
-        }
+      html {
+        background: #27002d;
       }
     </style>
     <!-- Redirect ----------------------------->
     <script>
 
-      // window.location.replace(`https://convertIt.github.io?Type=Color`);
+      window.location.replace(`https://convertIt.github.io?Type=Color`);
 
     </script>
   </head>
